tests/fsharp/typecheck/requirenamedargument/test1.bsl

test1.fsx(41,1,41,4): typecheck error FS3394: The method 'B' has the 'RequireNamedArgumentAttribute' attribute specified, use the named arguments syntax (e.g. 'MethodName(x = value)').

test1.fsx(43,1,43,4): typecheck error FS3394: The method 'C' has the 'RequireNamedArgumentAttribute' attribute specified, use the named arguments syntax (e.g. 'MethodName(x = value)').

test1.fsx(50,1,50,4): typecheck error FS3394: The method 'I' has the 'RequireNamedArgumentAttribute' attribute specified, use the named arguments syntax (e.g. 'MethodName(x = value)').

test1.fsx(54,1,54,5): typecheck error FS3394: The method 'I' has the 'RequireNamedArgumentAttribute' attribute specified, use the named arguments syntax (e.g. 'MethodName(x = value)').

test1.fsx(57,1,57,23): typecheck error FS3394: The method 'DefaultMethod' has the 'RequireNamedArgumentAttribute' attribute specified, use the named arguments syntax (e.g. 'MethodName(x = value)').

test1.fsx(58,1,58,16): typecheck error FS3394: The method 'Method' has the 'RequireNamedArgumentAttribute' attribute specified, use the named arguments syntax (e.g. 'MethodName(x = value)').

test1.fsx(60,1,60,24): typecheck error FS3394: The method 'DefaultMethod' has the 'RequireNamedArgumentAttribute' attribute specified, use the named arguments syntax (e.g. 'MethodName(x = value)').

test1.fsx(61,1,61,17): typecheck error FS3394: The method 'Method' has the 'RequireNamedArgumentAttribute' attribute specified, use the named arguments syntax (e.g. 'MethodName(x = value)').
